examples/deploy-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ceph
  namespace: openstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tests
  template:
    metadata:
      labels:
        app: tests
    spec:
      containers:
      - image: busybox:latest
        command:
        - sleep
        - 1d
        name: test
        volumeMounts:
        - mountPath: /test
          name: test-data
      volumes:
      - name: test-data
        persistentVolumeClaim:
          claimName: test-data-0
