examples/dnsperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dnsperf
  name: dnsperf-test
  namespace: default
spec:
  minReadySeconds: 3
  progressDeadlineSeconds: 30
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dnsperf
  template:
    metadata:
      labels:
        app: dnsperf
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: node-1
      containers:
      - args:
        - while true; do dnsperf -l 60 -s 10.222.0.3 -Q 1000 -d /opt/records.txt; sleep 10; done
        command:
        - sh
        - -c
        image: docker.io/yylt/dnsperf:latest
        imagePullPolicy: Always
        name: dnsperf
        volumeMounts:
        - mountPath: /opt/
          name: dns-records-volume
          readOnly: true
      dnsPolicy: Default
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: dns-records-config
        name: dns-records-volume
