examples/logout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    ecns.es.io/workload: deployment-logout
  name: log-stdout
  namespace: lw-ns-2
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      ecns.es.io/workload: deployment-logout
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        ecns.es.io/workload: deployment-logout
    spec:
      containers:
        - command:
            - sh
            - '-c'
            - while true;do echo "1 $(date)" ; sleep 1;done
          image: hub.ecns.io/library/nginx:v1
          imagePullPolicy: IfNotPresent
          name: container1
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: default-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
