examples/runtime-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test
spec:
  runtimeClassName: runc
  containers:
  - name: busybox
    image: busybox:latest
    stdin: true
    tty: true
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
