examples/stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    ecns.es.io/workload: deployment-stress
  name: stress-ng
  namespace: lw-ns-2
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      ecns.es.io/workload: deployment-stressng
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        ecns.es.io/workload: deployment-stressng
    spec:
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: stressng-ng
                    operator: In
                    values:
                      - 'true'
              topologyKey: kubernetes.io/hostname
      containers:
        - command:
            - /stress-ng
            - '-c 2 -t 300'
          image: 'hub.ecns.io/library/stress-ng:latest'
          imagePullPolicy: IfNotPresent
          name: container1
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: default-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
